scripts/nullness/original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8.txt
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/helpers/Client.java:4: error: [initialization.static.field.uninitialized] static field output not initialized
	private static String output;
	                      ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterB.java:5: error: [method.invocation] call to setSymbol(char) not allowed on the given receiver.
		setSymbol('B');
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterB.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterB.java:6: error: [method.invocation] call to setWidth(int) not allowed on the given receiver.
		setWidth(20);
		        ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterB.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterB.java:7: error: [method.invocation] call to setHeight(int) not allowed on the given receiver.
		setHeight(30);
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterB.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterC.java:5: error: [method.invocation] call to setSymbol(char) not allowed on the given receiver.
		setSymbol('C');
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterC.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterC.java:6: error: [method.invocation] call to setWidth(int) not allowed on the given receiver.
		setWidth(40);
		        ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterC.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterC.java:7: error: [method.invocation] call to setHeight(int) not allowed on the given receiver.
		setHeight(50);
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterC.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterA.java:5: error: [method.invocation] call to setSymbol(char) not allowed on the given receiver.
		setSymbol('A');
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterA.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterA.java:6: error: [method.invocation] call to setWidth(int) not allowed on the given receiver.
		setWidth(10);
		        ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterA.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/CharacterA.java:7: error: [method.invocation] call to setHeight(int) not allowed on the given receiver.
		setHeight(20);
		         ^
  found   : @UnderInitialization(patterns.gof.structural.flyweight.CharacterA.class) @NonNull EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java:27: error: [argument] incompatible argument for parameter value of HashMap.put.
			characters.put(characterCode, character);
			                              ^
  found   : @Initialized @Nullable EnglishCharacter
  required: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java:29: error: [return] incompatible types in return.
		return character;
		       ^
  type of expression: @Initialized @Nullable EnglishCharacter
  method return type: @Initialized @NonNull EnglishCharacter
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/abstractFactory/FactoryMaker.java:9: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull AbstractFactory
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/singleton/Singleton.java:6: error: [assignment] incompatible types in assignment.
	private static Singleton instance = null;
	                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull Singleton
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/singleton/Singleton.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: data
	private Singleton() {};
	        ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/PieBuilder.java:4: error: [initialization.field.uninitialized] the default constructor does not initialize field pie
	private Pie pie;
	            ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Pie.java:4: error: [initialization.field.uninitialized] the default constructor does not initialize field dough
	private String dough;
	               ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Pie.java:5: error: [initialization.field.uninitialized] the default constructor does not initialize field filling
	private String filling;
	               ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:4: error: [initialization.field.uninitialized] the default constructor does not initialize field pb
	private PieBuilder pb;
	                   ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/creational/builder/Cook.java:34: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Pie
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/observer/CurrentConditionsDisplay.java:10: error: [argument] incompatible argument for parameter o of WeatherData.registerObserver.
        this.weatherData.registerObserver(this);
                                          ^
  found   : @UnderInitialization(patterns.gof.behavioral.observer.CurrentConditionsDisplay.class) @NonNull CurrentConditionsDisplay
  required: @Initialized @NonNull Observer
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/command/CommandClient.java:29: error: [argument] incompatible argument for parameter command of CommandCenter.executeAndSave.
			center.executeAndSave(commands.get(direction));
			                                  ^
  found   : @Initialized @Nullable Command
  required: @Initialized @NonNull Command
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Caretaker.java:4: error: [initialization.field.uninitialized] the default constructor does not initialize field memento
	private Memento memento;
	                ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/memento/Originator.java:4: error: [initialization.field.uninitialized] the default constructor does not initialize field state
	private String state;
	               ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/state/StateContext.java:5: error: [initialization.fields.uninitialized] the constructor does not initialize fields: myState
    public StateContext() {
           ^
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/state/StateContext.java:6: error: [method.invocation] call to setState(patterns.gof.behavioral.state.Statelike) not allowed on the given receiver.
        setState(new StateOne());
                ^
  found   : @UnderInitialization @NonNull StateContext
  required: @Initialized @NonNull StateContext
../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/behavioral/chainOfResponsibility/Logger.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: next
    public Logger(int mask) {
           ^
Note: ../original/url52422c4052_AtorVdm_Patterns_tgz-pJ8-patterns_MainJ8/src/patterns/gof/structural/flyweight/FlyweightFactory.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
27 errors
